# score

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
examples/: example_utils.py  solve_goats_example_score.py  solve_problem_score.py
examples/goats_14_data/: goats_14_6_2002_15_20.pkl  gt_traj_A.tum
examples/manhattan/: factor_graph.pickle
score/: get_score_solution.py  solve_score.py
score/utils/: circle_utils.py  drake_utils.py  gtsam_utils.py  gurobi_utils.py  matrix_utils.py  plot_utils.py  solver_utils.py
