[options]
install_requires =
    attrs
    coloredlogs
    numpy
    gurobipy

packages = find:

[metadata]
name = score
version = 0.1.0
description = A second-order conic relaxation of the range-only SLAM problem
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com:MarineRoboticsGroup/score.git
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
score = py.typed
